2009-07-31  Adam Treat  <adam.treat@torchmobile.com>

        Reviewed by Holger Hans Peter Freyther.

        The reason these four tests fail is a mystery to me right, but placing
        them in the Skipped file and the Qt port is... for the first time ever,
        finally green!

        https://bugs.webkit.org/show_bug.cgi?id=27914

        * platform/qt/Skipped:

2009-07-31  Adam Treat  <adam.treat@torchmobile.com>

        Reviewed by Eric Seidel.

        Printing related test needs to go in Skipped for now so we can
        get Qt buildbot green for first time.

        https://bugs.webkit.org/show_bug.cgi?id=27913

        * platform/qt/Skipped:

2009-07-31  Adam Treat  <adam.treat@torchmobile.com>

        Reviewed by Eric Seidel.

        Sometimes they pass, sometimes they fail.  In attempt to get Qt buildbot
        completely green for first time I'm placing these two in the Skipped file.

        https://bugs.webkit.org/show_bug.cgi?id=27912

        * platform/qt/Skipped:

2009-07-31  Adam Treat  <adam.treat@torchmobile.com>

        Reviewed by George Staikos and Eric Seidel.

        Place some audio related tests into the Skipped list in
        attempt to get Qt buildbot finally green.

        https://bugs.webkit.org/show_bug.cgi?id=27910

        * platform/qt/Skipped:

2009-07-31  Jan Michael Alonzo  <jmalonzo@webkit.org>

        Skip http/tests/misc/favicon-loads-with-images-disabled.html as
        this requires resource load callbacks in Gtk DRT. I've raised bug
        #27905 to track this.

        * platform/gtk/Skipped:

2009-07-31  Brady Eidson  <beidson@apple.com>

        Reviewed by John Sullivan.

        <rdar://problem/6973106> and https://bugs.webkit.org/show_bug.cgi?id=27896
        Favicons are still loaded when automatic image loading is disabled.

        * http/tests/misc/favicon-loads-with-images-disabled-expected.txt: Added.
        * http/tests/misc/favicon-loads-with-images-disabled.html: Added.
