@@ -1,0 +1,1 @@
+Passes if we don't crash. (Note the following script tag has "smart" quotes.)
