@@ -1,0 +1,9 @@
+<script>
+if (window.layoutTestController)
+    layoutTestController.dumpAsText();
+</script>
+
+Passes if we don't crash.  (Note the following script tag has "smart" quotes.)
+
+<script type=”text/javascript”>
+</script>
