@@ -1,3 +1,13 @@
+2009-08-01  Evan Martin  <evan@chromium.org>
+
+        Reviewed by Adam Barth.
+
+        Add a regression test for a crash when a page has smart quotes in a
+        mime type.
+
+        * fast/parser/smart-quotes-in-tag-expected.txt: Added.
+        * fast/parser/smart-quotes-in-tag.html: Added.
+
 2009-07-31  Adam Treat  <adam.treat@torchmobile.com>
 
         Reviewed by Holger Hans Peter Freyther.
